[metadata]
name = behave_command_line
version = 0.9.0
description = Functions for command line gherkin testing with behave
author = Joint Genome Institute
long-description = file: CHANGELOG.md
license = BSD
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: BSD License

[options]
packages = behave_command_line

[bdist_wheel]
universal=1

[mypy]
check_untyped_defs=True
disallow_any_generics=True
disallow_incomplete_defs=True
disallow_subclassing_any=True
disallow_untyped_calls=True
disallow_untyped_defs=True
no_implicit_optional=True
no_implicit_reexport=True
warn_redundant_casts=True
warn_return_any=True
warn_unused_configs=True
warn_unused_ignores=True

[mypy-behave_command_line]
# All the behave steps are untyped decorators
disallow_any_decorated=False

[mypy-behave]
ignore_missing_imports=True